--- a/style.css
+++ b/style.css
@@ -1,30 +1,37 @@
-:root {
-    --grid-cols: 1;
-    --grid-rows: 1;
-  }
-  
-  #container {
-    width: 960px;
-    height: 960px;
+body {
+  background-color: rgb(24, 24, 24);
 
-    margin-top: 30px;
-    
-    display: grid;
-    grid-gap: 1em;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
-  }
-  
-  .grid-item {
-    padding: 1em;
-    border: 1px solid black;
-    margin: -0.5em;
-    text-align: center;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgba(245, 245, 245, 0.836);
+  text-align: center;
+}
 
-  .hover {
-    background-color: black;
-  }
+#copyright {
+  font-size: 0.7em;
+}
 
-  #mainContainer {
-    margin-bottom: 1em  }
+.container {
+  height: 75vh;
+  width: 75vh;
+  margin: auto;
+  border: 3px solid white;
+  padding: 0px;
+  border-radius: 7px;
+  margin-top: 1.5em;
+
+  display: grid;
+  /* grid-template-rows: repeat(16, 1fr);
+  grid-template-columns: repeat(16, 1fr); */
+}
+
+.gridPart {
+  color: white;
+  border: 1px solid rgb(68, 68, 68);
+  background-color:hsl(0, 0%, 14%);
+}
+
+button {
+  position: relative;
+  top: 2vh;
+  transform: scale(1.3);
+}
