--- a/style.css
+++ b/style.css
@@ -1,37 +1,39 @@
 body {
-  background-color: rgb(24, 24, 24);
-
+  background-color: rgb(194, 20, 20);
   font-family: Arial, Helvetica, sans-serif;
   color: rgba(245, 245, 245, 0.836);
   text-align: center;
-}
-
-#copyright {
-  font-size: 0.7em;
 }
 
 .container {
   height: 75vh;
   width: 75vh;
   margin: auto;
-  border: 3px solid white;
+  border: 3px solid black;
   padding: 0px;
   border-radius: 7px;
   margin-top: 1.5em;
-
   display: grid;
-  /* grid-template-rows: repeat(16, 1fr);
-  grid-template-columns: repeat(16, 1fr); */
 }
 
 .gridPart {
   color: white;
   border: 1px solid rgb(68, 68, 68);
-  background-color:hsl(0, 0%, 14%);
+  background-color: white;
 }
 
 button {
   position: relative;
   top: 2vh;
   transform: scale(1.3);
+  color: rgb(194, 155, 12);
+  font-size: medium;
+  background-color: transparent;
+  border-color: 1px solid black;
+  font-style: italic;
+}
+
+h1 {
+  font-style: italic;
+  color: rgb(194, 155, 12);
 }
